--- a/app/views/factory/admin/productions/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index_tr.html.erb
@@ -1,23 +1,25 @@
-<tr>
+<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-info"></i>
-    <% end %>
-    <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-shopping-cart"></i>
-    <% end %>
-    <%= link_to({ controller: 'provideds', production_id: model.id }, aria: { label: t('factory.admin.provideds.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-hand-holding"></i>
-    <% end %>
-    <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-map-marker-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: model.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
+    <turbo-frame data-show-target="item" style="visibility: hidden">
+      <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-info"></i>
+      <% end %>
+      <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-shopping-cart"></i>
+      <% end %>
+      <%= link_to({ controller: 'provideds', production_id: model.id }, aria: { label: t('factory.admin.provideds.index.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-hand-holding"></i>
+      <% end %>
+      <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-map-marker-alt"></i>
+      <% end %>
+      <%= link_to({ action: 'edit', id: model.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-pencil-alt"></i>
+      <% end %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-trash-alt"></i>
+      <% end %>
+    </turbo-frame>
   </td>
 </tr>
