--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
   <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
-  <%= model.product.name %>
+  <%= model.name %>
 </td>
 <td>
   <table class="table is-fullwidth is-borderless">
