--- a/app/views/factory/admin/part_taxons/_production.html.erb
+++ b/app/views/factory/admin/part_taxons/_production.html.erb
@@ -2,7 +2,7 @@
   <td>
     <span style="width: 1em; display: inline-block"></span>
     <%= image_tag production.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if production.product.logo.attached? %>
-    <%= production.product.name %>
+    <%= production.name %>
   </td>
   <td><%= production.product.qr_prefix %></td>
   <td>
