--- a/app/views/factory/admin/factory_taxons/_index_thead.html.erb
+++ b/app/views/factory/admin/factory_taxons/_index_thead.html.erb
@@ -1,2 +1,2 @@
-<th><%= FactoryTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::FactoryTaxon.human_attribute_name(:name) %></th>
 <th></th>
