--- a/app/views/factory/admin/part_taxons/_index_thead.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_thead.html.erb
@@ -1,3 +1,3 @@
-<th><%= PartTaxon.human_attribute_name(:name) %></th>
-<th><%= PartTaxon.human_attribute_name(:factory_taxon_id) %></th>
+<th><%= Factory::PartTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::PartTaxon.human_attribute_name(:factory_taxon_id) %></th>
 <th></th>
