--- a/app/views/factory/admin/addresses/_index_thead.html.erb
+++ b/app/views/factory/admin/addresses/_index_thead.html.erb
@@ -1,7 +1,7 @@
-<th><%= Address.human_attribute_name(:area_id) %></th>
-<th><%= Address.human_attribute_name(:detail) %></th>
-<th><%= Address.human_attribute_name(:contact) %></th>
-<th><%= Address.human_attribute_name(:tel) %></th>
-<th><%= Address.human_attribute_name(:post_code) %></th>
-<th><%= Address.human_attribute_name(:source) %></th>
+<th><%= Factory::Address.human_attribute_name(:area_id) %></th>
+<th><%= Factory::Address.human_attribute_name(:detail) %></th>
+<th><%= Factory::Address.human_attribute_name(:contact) %></th>
+<th><%= Factory::Address.human_attribute_name(:tel) %></th>
+<th><%= Factory::Address.human_attribute_name(:post_code) %></th>
+<th><%= Factory::Address.human_attribute_name(:source) %></th>
 <th></th>
