--- a/app/views/factory/admin/part_taxons/_import/_index_thead.html.erb
+++ b/app/views/factory/admin/part_taxons/_import/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= Product.human_attribute_name(:name) %></th>
-<th><%= Product.human_attribute_name(:qr_prefix) %></th>
+<th><%= Factory::Product.human_attribute_name(:name) %></th>
+<th><%= Factory::Product.human_attribute_name(:qr_prefix) %></th>
 <td></td>
-<th><%= Product.human_attribute_name(:parts) %></th>
+<th><%= Factory::Product.human_attribute_name(:parts) %></th>
 <th></th>
 <th></th>
