--- a/app/views/factory/admin/product_plans/_index_thead.html.erb
+++ b/app/views/factory/admin/product_plans/_index_thead.html.erb
@@ -1,9 +1,9 @@
-<th><%= ProductPlan.human_attribute_name(:produce_plan_id) %></th>
+<th><%= Factory::ProductPlan.human_attribute_name(:produce_plan_id) %></th>
 <th>
   <p><%= ProductPlan.human_attribute_name(:start_at) %></p>
   <p><%= ProductPlan.human_attribute_name(:finish_at) %></p>
 </th>
-<th><%= ProductPlan.human_attribute_name(:state) %></th>
-<th><%= ProductPlan.human_attribute_name(:planned_count) %></th>
-<th><%= ProductPlan.human_attribute_name(:produced_count) %></th>
+<th><%= Factory::ProductPlan.human_attribute_name(:state) %></th>
+<th><%= Factory::ProductPlan.human_attribute_name(:planned_count) %></th>
+<th><%= Factory::ProductPlan.human_attribute_name(:produced_count) %></th>
 <th></th>
