--- a/app/views/factory/admin/product_taxons/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_thead.html.erb
@@ -1,4 +1,4 @@
-<th><%= ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
-<th><%= ProductTaxon.human_attribute_name(:name) %></th>
-<th><%= ProductTaxon.human_attribute_name(:logo) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:logo) %></th>
 <th></th>
