--- a/app/views/factory/admin/trade_items/_filter_form.html.erb
+++ b/app/views/factory/admin/trade_items/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: TradeItem.new do |f| %>
+<%= form_with theme: 'search', model: Factory::TradeItem.new do |f| %>
   <div class="fields">
     <%= f.text_field :name %>
     <%= f.submit %>
