--- a/app/views/factory/my/good_providers/_table.html.erb
+++ b/app/views/factory/my/good_providers/_table.html.erb
@@ -1,9 +1,9 @@
 <table class="ui table">
   <thead>
     <tr>
-      <th><%= GoodProvider.human_attribute_name(:name) %></th>
-      <th><%= GoodProvider.human_attribute_name(:export_price) %></th>
-      <th><%= GoodProvider.human_attribute_name(:verified) %></th>
+      <th><%= Factory::GoodProvider.human_attribute_name(:name) %></th>
+      <th><%= Factory::GoodProvider.human_attribute_name(:export_price) %></th>
+      <th><%= Factory::GoodProvider.human_attribute_name(:verified) %></th>
       <th></th>
       <th></th>
     </tr>
