--- a/app/views/factory/panel/providers/_index_thead.html.erb
+++ b/app/views/factory/panel/providers/_index_thead.html.erb
@@ -1,2 +1,2 @@
-<th><%= FactoryProvider.human_attribute_name(:provider_id) %></th>
+<th><%= Factory::FactoryProvider.human_attribute_name(:provider_id) %></th>
 <th></th>
