--- a/app/views/factory/admin/addresses/_filter.html.erb
+++ b/app/views/factory/admin/addresses/_filter.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: Address.new do |f| %>
+<%= form_with theme: 'search', model: Factory::Address.new do |f| %>
   <div class="fields">
     <%= f.text_field :name %>
     <%= f.submit %>
