--- a/app/views/factory/admin/part_items/_filter_form.html.erb
+++ b/app/views/factory/admin/part_items/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: PartItem.new do |f| %>
+<%= form_with theme: 'search', model: Factory::PartItem.new do |f| %>
   <div class="fields">
     <%= f.date_field 'received_at-gte' %>
     <%= f.date_field 'received_at-lte' %>
