--- a/app/views/factory/admin/part_items/_index_thead.html.erb
+++ b/app/views/factory/admin/part_items/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= PartItem.human_attribute_name(:part_id) %></th>
-<th><%= PartItem.human_attribute_name(:qr_code) %></th>
-<th><%= PartItem.human_attribute_name(:qr_file) %></th>
-<th><%= PartItem.human_attribute_name(:received_at) %></th>
-<th><%= PartItem.human_attribute_name(:state) %></th>
+<th><%= Factory::PartItem.human_attribute_name(:part_id) %></th>
+<th><%= Factory::PartItem.human_attribute_name(:qr_code) %></th>
+<th><%= Factory::PartItem.human_attribute_name(:qr_file) %></th>
+<th><%= Factory::PartItem.human_attribute_name(:received_at) %></th>
+<th><%= Factory::PartItem.human_attribute_name(:state) %></th>
 <th></th>
