--- a/app/views/factory/admin/part_providers/_index_thead.html.erb
+++ b/app/views/factory/admin/part_providers/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= PartProvider.human_attribute_name(:provider_id) %></th>
-<th><%= PartProvider.human_attribute_name(:export_price) %></th>
-<th><%= PartProvider.human_attribute_name(:verified) %></th>
-<th><%= PartProvider.human_attribute_name(:selected) %></th>
-<th><%= PartProvider.human_attribute_name(:created_at) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:provider_id) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:export_price) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:verified) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:selected) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:created_at) %></th>
 <th></th>
