--- a/app/views/factory/admin/parts/_index_thead.html.erb
+++ b/app/views/factory/admin/parts/_index_thead.html.erb
@@ -4,9 +4,9 @@
     <i class="fas fa-cog"></i>
   <% end %>
 </th>
-<th><%= Part.human_attribute_name(:name) %></th>
-<th><%= Part.human_attribute_name(:qr_prefix) %></th>
-<th><%= Part.human_attribute_name(:part_plans) %></th>
+<th><%= Factory::Part.human_attribute_name(:name) %></th>
+<th><%= Factory::Part.human_attribute_name(:qr_prefix) %></th>
+<th><%= Factory::Part.human_attribute_name(:part_plans) %></th>
 <th class="has-text-right">
   <p><%= Part.human_attribute_name(:import_price) %></p>
   <p><%= Part.human_attribute_name(:profit_price) %></p>
