--- a/app/views/factory/admin/produce_plans/_filter_form.html.erb
+++ b/app/views/factory/admin/produce_plans/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: ProducePlan.new do |f| %>
+<%= form_with theme: 'search', model: Factory::ProducePlan.new do |f| %>
   <div class="field-body">
     <%= f.text_field :title %>
     <div class="field is-narrow">
