--- a/app/views/factory/admin/product_parts/_filter_form.html.erb
+++ b/app/views/factory/admin/product_parts/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: ProductPart.new do |f| %>
+<%= form_with theme: 'search', model: Factory::ProductPart.new do |f| %>
   <div class="field-body">
     <%= f.text_field :name %>
     <div class="field is-narrow">
