--- a/app/views/factory/admin/product_parts/_index_thead.html.erb
+++ b/app/views/factory/admin/product_parts/_index_thead.html.erb
@@ -1,5 +1,5 @@
-<th><%= ProductPart.human_attribute_name(:part_taxon_id) %></th>
-<th><%= ProductPart.human_attribute_name(:part_id) %></th>
-<th><%= ProductPart.human_attribute_name('part.price') %></th>
-<th><%= ProductPart.human_attribute_name(:default) %></th>
+<th><%= Factory::ProductPart.human_attribute_name(:part_taxon_id) %></th>
+<th><%= Factory::ProductPart.human_attribute_name(:part_id) %></th>
+<th><%= Factory::ProductPart.human_attribute_name('part.price') %></th>
+<th><%= Factory::ProductPart.human_attribute_name(:default) %></th>
 <th></th>
