--- a/app/views/factory/admin/productions/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index_thead.html.erb
@@ -1,6 +1,6 @@
 <th colspan="2"><%= Production.human_attribute_name(:name) %></th>
-<th><%= Production.human_attribute_name(:state) %></th>
-<th><%= Production.human_attribute_name(:qr_code) %></th>
+<th><%= Factory::Production.human_attribute_name(:state) %></th>
+<th><%= Factory::Production.human_attribute_name(:qr_code) %></th>
 <th class="has-text-right">
   <p><%= Production.human_attribute_name(:cost_price) %></p>
   <p><%= Production.human_attribute_name(:profit_price) %></p>
@@ -8,5 +8,5 @@
 </th>
 <th></th>
 <th></th>
-<th><%= Production.human_attribute_name(:default) %></th>
+<th><%= Factory::Production.human_attribute_name(:default) %></th>
 <th></th>
