--- a/app/views/factory/panel/factory_taxons/_filter_form.html.erb
+++ b/app/views/factory/panel/factory_taxons/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: FactoryTaxon.new do |f| %>
+<%= form_with theme: 'search', model: Factory::FactoryTaxon.new do |f| %>
   <div class="field-body">
     <%= f.text_field :name %>
     <div class="field is-narrow">
