--- a/app/views/factory/panel/factory_taxons/_index_thead.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index_thead.html.erb
@@ -1,3 +1,3 @@
-<th><%= FactoryTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::FactoryTaxon.human_attribute_name(:name) %></th>
 <th></th>
 <th></th>
