--- a/app/views/factory/admin/produce_plans/index.html.erb
+++ b/app/views/factory/admin/produce_plans/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: ProducePlan.column_names.hash } do %>
+<%= render layout: 'index_table', locals: { cache_key: Factory::ProducePlan.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @produce_plans, as: :model %>
 <% end %>
 
