--- a/app/views/factory/admin/product_items/index.html.erb
+++ b/app/views/factory/admin/product_items/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: ProductItem.column_names.hash } do %>
+<%= render layout: 'index_table', locals: { cache_key: Factory::ProductItem.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_items, as: :product_item %>
 <% end %>
 
