--- a/app/views/factory/admin/product_part_taxons/index.html.erb
+++ b/app/views/factory/admin/product_part_taxons/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: ProductPartTaxon.column_names.hash } do %>
+<%= render layout: 'index_table', locals: { cache_key: Factory::ProductPartTaxon.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_part_taxons, as: :product_part_taxon %>
 <% end %>
 
