--- a/app/views/factory/admin/productions/index.html.erb
+++ b/app/views/factory/admin/productions/index.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'index_table', locals: { cache_key: Production.column_names.hash } do %>
+<%= render layout: 'index_table', locals: { cache_key: Factory::Production.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
 <% end %>
