--- a/app/views/factory/admin/produce_plans/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_thead.html.erb
@@ -1,7 +1,7 @@
 <th><%= Factory::ProducePlan.human_attribute_name(:title) %></th>
 <th>
-  <p><%= ProducePlan.human_attribute_name(:start_at) %></p>
-  <p><%= ProducePlan.human_attribute_name(:finish_at) %></p>
+  <p><%= Factory::ProducePlan.human_attribute_name(:start_at) %></p>
+  <p><%= Factory::ProducePlan.human_attribute_name(:finish_at) %></p>
 </th>
 <th><%= Factory::ProducePlan.human_attribute_name(:state) %></th>
 <th></th>
