--- a/app/views/factory/admin/part_taxons/_production.html.erb
+++ b/app/views/factory/admin/part_taxons/_production.html.erb
@@ -1,13 +1,13 @@
-<tr id="tr_<%= @part_taxon.id %>_<%= production.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= @part_taxon.id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
     <span style="width: 1em; display: inline-block"></span>
-    <%= image_tag production.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if production.product.logo.attached? %>
-    <%= production.name %>
+    <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
+    <%= model.name %>
   </td>
-  <td><%= production.product.qr_prefix %></td>
+  <td><%= model.product.qr_prefix %></td>
   <td>
     <table class="table is-borderless">
-      <% production.parts.each do |part| %>
+      <% model.parts.each do |part| %>
         <tr>
           <td><span class="tag"><%= link_to part.name, { controller: 'parts', action: 'show', id: part.id } %></span></td>
           <td><%= part.price %></td>
@@ -16,21 +16,21 @@
     </table>
   </td>
   <td>
-    <% part_provider = production.part_providers.default_where(default_params).take %>
+    <% part_provider = model.part_providers.default_where(default_params).take %>
     <% if part_provider %>
       <i class="fas fa-check has-text-success"></i>
-      <%= button_to({ controller: 'parts', action: 'destroy', id: part_provider.part_id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-tractor"></i>
+      <%= button_to({ controller: 'parts', action: 'destroy', id: part_provider.part_id }, method: :destroy, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-times"></i>
       <% end %>
     <% else %>
-      <%= button_to({ controller: 'productions', action: 'provide', product_id: production.product_id, id: production.id, part_taxon_id: @part_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'productions', action: 'provide', product_id: model.product_id, id: model.id, part_taxon_id: @part_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fas fa-tractor"></i>
       <% end %>
     <% end %>
   </td>
   <td></td>
   <td>
-    <%= link_to({ controller: 'productions', action: 'show', product_id: production.product_id, id: production.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-info"></i>
     <% end %>
   </td>
