--- a/app/views/factory/admin/part_taxons/productions.html.erb
+++ b/app/views/factory/admin/part_taxons/productions.html.erb
@@ -1,5 +1,5 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::Product.column_names.hash } do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
+<%= render layout: 'product_table', locals: { cache_key: Factory::Product.column_names.hash } do %>
+  <%= render partial: 'product_tbody', layout: 'product_tr', collection: @products, as: :model %>
 <% end %>
 
 <%= paginate @products %>
