--- a/app/views/factory/admin/part_plans/_form.html.erb
+++ b/app/views/factory/admin/part_plans/_form.html.erb
@@ -1,20 +1,16 @@
 <%= render 'shared/error_messages', target: f.object %>
-<div class="inline fields">
+<div class="field is-horizontal">
   <%= f.label :start_at %>
-  <div class="four wide field">
-    <%= f.date_field 'start_at(date)', can: { wrap_input: false, wrap_all: false }, label: false, required: true %>
-  </div>
-  <div class="three wide field">
-    <%= f.time_select :start_at, start_hour: 8, end_hour: 18, minute_step: 30, default: {hour: 8, min: 30} %>
+  <div class="field-body">
+    <%= f.date_field 'start_at(date)', wrap: { all_required: false, input: 'field is-narrow' }, on: { label: false }, required: true %>
+    <%= f.time_select :start_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 8, min: 30 }, wrap: { all: 'field is-narrow', select: 'select' }, on: { label: false } %>
   </div>
 </div>
-<div class="inline fields">
+<div class="field is-horizontal">
   <%= f.label :finish_at %>
-  <div class="four wide field">
-    <%= f.date_field 'finish_at(date)', can: { wrap_input: false, wrap_all: false }, label: false, required: true %>
-  </div>
-  <div class="three wide field">
-    <%= f.time_select :finish_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 17, min: 30 } %>
+  <div class="field-body">
+    <%= f.date_field 'finish_at(date)', wrap: { all_required: false, input: 'field is-narrow' }, on: { label: false }, required: true %>
+    <%= f.time_select :finish_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 17, min: 30 }, wrap: { all: 'field is-narrow', select: 'select' }, on: { label: false } %>
   </div>
 </div>
 <%= f.text_field :state %>
