--- a/app/views/factory/admin/productions/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index_thead.html.erb
@@ -1,10 +1,10 @@
-<th colspan="2"><%= Production.human_attribute_name(:name) %></th>
+<th colspan="2"><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:state) %></th>
 <th><%= Factory::Production.human_attribute_name(:qr_code) %></th>
 <th class="has-text-right">
-  <p><%= Production.human_attribute_name(:cost_price) %></p>
-  <p><%= Production.human_attribute_name(:profit_price) %></p>
-  <p><%= Production.human_attribute_name(:price) %></p>
+  <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
+  <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
+  <p><%= Factory::Production.human_attribute_name(:price) %></p>
 </th>
 <th></th>
 <th></th>
