--- a/app/views/factory/admin/productions/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index_tr.html.erb
@@ -1,8 +1,8 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <turbo-frame data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+    <span data-show-target="item" style="visibility: hidden">
+      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fas fa-info"></i>
       <% end %>
       <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
@@ -20,6 +20,6 @@
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fas fa-trash-alt"></i>
       <% end %>
-    </turbo-frame>
+    </span>
   </td>
 </tr>
