--- a/app/views/factory/admin/product_taxons/_show_table.html.erb
+++ b/app/views/factory/admin/product_taxons/_show_table.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:name) %></td>
+  <td class="has-text-right"><%= Factory::ProductTaxon.human_attribute_name(:name) %></td>
   <td><%= @product_taxon.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:position) %></td>
+  <td class="has-text-right"><%= Factory::ProductTaxon.human_attribute_name(:position) %></td>
   <td><%= @product_taxon.position %></td>
 </tr>
