--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -7,6 +7,6 @@
 
 <div class="box">
 <% @production.product.images.each do |image| %>
-  <%= image_tag image -%>
+  <%= image_tag image, class: 'image' -%>
 <% end %>
 </div>
