--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 </div>
 
-<div class="box" data-controller="sticky" style="z-index: 3;">
+<div class="box is-radiusless" data-controller="sticky" style="z-index: 3">
   <div class="has-text-danger has-text-bold">
     <span><%= @production.price.to_money.symbol %></span>
     <span id="total_price"><%= @production.price.to_money.to_s %></span>
