--- a/app/views/factory/products/_figure.html.erb
+++ b/app/views/factory/products/_figure.html.erb
@@ -1,6 +1,6 @@
-<figure class="image" data-action="touchmove->slide#move:passive touchstart->slide#start:passive touchend->slide#end:passive" data-index="<%= index %>" style="z-index: <%= index == 0 ? 0 : -2 %>">
+<figure class="image" data-action="touchmove->slide#move:passive touchend->slide#end:passive" data-index="<%= index %>" style="z-index: <%= index == 0 ? 0 : -2 %>">
   <% if cover.content_type.to_s.start_with?('video') %>
-    <%= video_tag cover, controls: true, autoplay: true %>
+    <%= video_tag cover.url, controls: true %>
   <% else %>
     <%= image_tag cover %>
   <% end %>
