products search form

--- a/app/views/factory/admin/productions/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index_thead.html.erb
@@ -4,8 +4,8 @@
 <th class="has-text-right">
   <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
-  <p><%= Factory::Production.human_attribute_name(:price) %></p>
 </th>
+<th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th></th>
 <th></th>
 <th><%= Factory::Production.human_attribute_name(:default) %></th>
