--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -14,4 +14,8 @@
 <th><%= Factory::Product.human_attribute_name(:covers) %></th>
 <th><%= Factory::Product.human_attribute_name(:qr_prefix) %></th>
 <th><%= Factory::Product.human_attribute_name(:profit_margin) %></th>
+<th>
+  <p><%= Factory::Product.human_attribute_name(:min_price) %></p>
+  <p><%= Factory::Product.human_attribute_name(:max_price) %></p>
+</th>
 <th colspan="2"></th>
