--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -17,8 +17,8 @@
 <td class="has-text-right">
   <p><%= model.cost_price.to_s(:currency, unit: '￥') %></p>
   <p><%= model.profit_price.to_s(:currency, unit: '￥') %></p>
-  <p><%= model.price.to_s(:currency, unit: '￥') %></p>
 </td>
+<td><%= model.price.to_s(:currency, unit: '￥') %></td>
 <td>
   <%= link_to({ action: 'price', id: model.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fas fa-dollar-sign"></i>
