--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -1,10 +1,14 @@
 <td><%= link_to model.name, { action: 'show', id: model.id }, text: true %></td>
 <td><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></td>
 <td>
-  <%= render 'com/attachments/list', target: model.covers %>
+  <%= render 'com/attachments/list_many', target: model.covers %>
 </td>
 <td><%= model.qr_prefix %></td>
 <td><%= model.profit_margin_str %></td>
+<td>
+  <p><%= model.min_price %></p>
+  <p><%= model.max_price %></p>
+</td>
 <td>
   <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fas fa-tree"></i>
