--- a/app/views/factory/products/_show/_tab_bar.html.erb
+++ b/app/views/factory/products/_show/_tab_bar.html.erb
@@ -7,7 +7,7 @@
   <% end %>
   <div class="weui-tabbar__item">
     <%= form_with theme: nil, url: add_my_cart_path do |f| %>
-      <%= f.hidden_field :good_type, value: 'Production' %>
+      <%= f.hidden_field :good_type, value: @production.class_name %>
       <%= f.hidden_field :good_id, value: @production.id %>
       <%= f.submit t('.add'), class: 'weui-btn weui-btn_warn' %>
     <% end %>
