--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -24,7 +24,14 @@
               <li class="weui-media-box__info__meta<%= index == 0 ? ' weui-media-box__info__meta_extra' : '' %>"><%= part.name %></li>
             <% end %>
           <% end %>
-          <li style="float: right"><%= product.min_price.to_money.format %></li>
+          <li class="has-text-danger" style="float: right">
+            <span>¥</span>
+            <span><%= product.min_price.to_money.to_s %></span>
+            <% if product.min_price != product.max_price %>
+              <span>-</span>
+              <span><%= product.max_price.to_money.to_s %></span>
+            <% end %>
+          </li>
         </ul>
       </div>
     <% end %>
