--- a/app/views/factory/admin/productions/_price_form.html.erb
+++ b/app/views/factory/admin/productions/_price_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @production, url: { action: 'update' } do |f| %>
   <%= render 'shared/error_messages', target: @production %>
-  <%= f.number_field :cost_price %>
-  <%= f.number_field :profit_price %>
+  <%= f.number_field :cost_price, step: 0.01 %>
+  <%= f.number_field :profit_price, step: 0.01 %>
   <%= f.submit %>
 <% end %>
