--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -3,7 +3,7 @@
     <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
-    <i class="fas fa-users fa-fw"></i>
+    <i class="fas fa-store fa-fw"></i>
     <span><%= t('factory.panel.title') %></span>
     <i class="fas dropdown"></i>
   </a>
