--- a/app/views/factory/products/_show/_tab_bar.html.erb
+++ b/app/views/factory/products/_show/_tab_bar.html.erb
@@ -1,12 +1,12 @@
 <div class="weui-tabbar weui-tabbar_fixed">
-  <%= link_to my_cart_path, class: 'weui-tabbar__item' do %>
+  <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-tabbar__item') do %>
     <i class="fas fa-shopping-cart weui-tabbar__icon">
       <span class="weui-badge"><%= current_cart_count %></span>
     </i>
     <div class="weui-tabbar__label">购物车</div>
   <% end %>
   <div class="weui-tabbar__item">
-    <%= form_with theme: nil, url: add_my_cart_path do |f| %>
+    <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
       <%= f.hidden_field :good_type, value: @production.class_name %>
       <%= f.hidden_field :good_id, value: @production.id %>
       <%= f.submit t('.add'), class: 'weui-btn weui-btn_warn' %>
