--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -3,7 +3,7 @@
 <% @products.each do |product| %>
   <div class="card">
     <div class="card-image">
-      <figure class="image">
+      <figure class="image is-1by1">
         <%= image_tag product.logo %>
       </figure>
     </div>
