--- a/app/views/factory/admin/productions/price.html.erb
+++ b/app/views/factory/admin/productions/price.html.erb
@@ -1,3 +1,3 @@
 <turbo-frame id="modal">
-  <%= render partial: 'modal_form', locals: { action: 'price' } %>
+  <%= render partial: 'price_form', locals: { action: 'price' } %>
 </turbo-frame>
