--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -1,7 +1,18 @@
-<div class="slide" data-controller="slide">
+<div data-controller="showcase">
+  <div class="slide images">
   <% @product.covers.each_with_index do |cover, index| %>
-    <%= render partial: 'figure', locals: { cover: cover, index: index } %>
+    <figure class="image">
+      <%= image_tag cover %>
+    </figure>
   <% end %>
+  </div>
+  <div class="images is-flex">
+  <% @product.covers.each_with_index do |cover, index| %>
+    <figure class="image is-32x32">
+      <%= image_tag cover %>
+    </figure>
+  <% end %>
+  </div>
 </div>
 
 <div class="box is-radiusless" data-controller="sticky" style="z-index: 3">
@@ -13,24 +24,4 @@
 
 <div class="box">
   <h1><%= @product.name %></h1>
-</div>
-
-<div>
-<% @product.product_part_taxons.each do |product_part_taxon| %>
-  <div class="weui-media-box weui-media-box_text">
-    <div class="weui-media-box__title">
-      <span><%= product_part_taxon.part_taxon.name %></span>
-      <span class="weui-panel__extra">选择范围：<%= product_part_taxon.min_select %> - <%= product_part_taxon.max_select %></span>
-    </div>
-    <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@production.part_ids & product_part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{product_part_taxon.min_select},#{product_part_taxon.max_select}" %>">
-      <% product_part_taxon.parts.each do |part| %>
-        <label class="weui-btn weui-btn_mini <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
-          <span><%= part.name %></span>
-          <span class="weui-btn__extra"><%= part.price %></span>
-          <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), data: { action: 'custom#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
-        </label>
-      <% end %>
-    </div>
-  </div>
-<% end %>
 </div>
