--- a/app/views/factory/products/show.html+phone.erb
+++ b/app/views/factory/products/show.html+phone.erb
@@ -1,3 +1,8 @@
+<%= form_with model: @production, url: { controller: 'factory/my/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
+  <%= f.hidden_field :product_id %>
+  <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
+<% end %>
+
 <div class="slide" data-controller="slide">
   <% @product.covers.each_with_index do |cover, index| %>
     <%= render partial: 'figure', locals: { cover: cover, index: index } %>
@@ -33,4 +38,10 @@
     </div>
   </div>
 <% end %>
+</div>
+
+<div class="box">
+  <% @production.product.images.each do |image| %>
+    <%= image_tag image, class: 'image' -%>
+  <% end %>
 </div>
