--- a/app/views/factory/products/_figure.html.erb
+++ b/app/views/factory/products/_figure.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="showcase">
+<div class="box" data-controller="showcase" data-showcase-hover-class="is-border">
   <div class="slide" data-showcase-target="window">
   <% @product.covers.each_with_index do |cover, index| %>
     <figure class="image" data-index="<%= index %>" style="z-index: <%= index == 0 ? 0 : -1 %>">
@@ -8,7 +8,7 @@
   </div>
   <div class="images is-flex">
   <% @product.covers.each_with_index do |cover, index| %>
-    <figure class="image is-32x32 is-border" data-index="<%= index %>" data-action="mouseover->showcase#show">
+    <figure class="image is-32x32" data-index="<%= index %>" data-action="mouseover->showcase#show">
       <%= image_tag cover %>
     </figure>
   <% end %>
