--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -2,16 +2,18 @@
   <div class="column">
     <%= render 'figure' %>
   </div>
-  <div class="column"></div>
-</div>
-
-<div class="box is-radiusless" data-controller="sticky" style="z-index: 3">
-  <div class="has-text-danger has-text-bold">
-    <span><%= @production.price.to_money.symbol %></span>
-    <span id="total_price"><%= @production.price.to_money.to_s %></span>
+  <div class="column">
+    <div class="box">
+      <h1 class="title"><%= @product.name %></h1>
+      <div class="has-text-danger has-text-bold">
+        <span><%= @production.price.to_money.symbol %></span>
+        <span id="total_price"><%= @production.price.to_money.to_s %></span>
+      </div>
+      <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
+        <%= f.hidden_field :good_type, value: @production.class_name %>
+        <%= f.hidden_field :good_id, value: @production.id %>
+        <%= f.submit t('.add'), class: 'button is-danger' %>
+      <% end %>
+    </div>
   </div>
-</div>
-
-<div class="box">
-  <h1><%= @product.name %></h1>
 </div>
