--- a/app/views/factory/admin/parts/_form.html.erb
+++ b/app/views/factory/admin/parts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages', target: @part %>
+<%= render 'error_messages', target: @part %>
 <%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'part_taxon', node: Factory::PartTaxon.new(organ_id: current_organ&.id) } %>
 <%= f.text_field :name %>
 <%= f.text_field :qr_prefix %>
