--- a/app/views/factory/admin/produce_plans/_form.html.erb
+++ b/app/views/factory/admin/produce_plans/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages', target: f.object %>
+<%= render 'error_messages', target: f.object %>
 <%= f.text_field :title, required: true %>
 <div class="field is-horizontal">
   <%= f.label :start_at %>
