--- a/app/views/factory/admin/product_items/_form.html.erb
+++ b/app/views/factory/admin/product_items/_form.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/error_messages', target: @product_item %>
+<%= render 'error_messages', target: @product_item %>
 <%= f.text_field :qr_code %>
 <%= f.datetime_field :produced_at %>
