--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages', target: @product %>
+<%= render 'error_messages', target: @product %>
 <%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: @product.product_taxon } %>
 <%= f.text_field :name %>
 <%= f.number_field :profit_margin, step: 0.01 %>
