--- a/app/views/factory/admin/providers/_form.html.erb
+++ b/app/views/factory/admin/providers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/error_messages', target: @provider %>
+<%= render 'error_messages', target: @provider %>
 <%= f.text_field :name %>
 <%= f.text_field :address %>
 <%= f.phone_field :service_tel %>
