--- a/app/views/factory/admin/providers/show.html.erb
+++ b/app/views/factory/admin/providers/show.html.erb
@@ -9,7 +9,7 @@
 
 
     <%= form_for @provider, :url => type_provider_path(@provider), :html => {:class=> "form-horizontal"} do |f| %>
-      <%= render "shared/error_messages", :target => @provider %>
+      <%= render "error_messages", :target => @provider %>
 
       <fieldset>
         <div class="form-group">
