--- a/app/views/factory/my/productions/_form.html.erb
+++ b/app/views/factory/my/productions/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: @custom, local: true do |f| %>
-  <%= render 'shared/error_messages', target: @custom %>
+  <%= render 'error_messages', target: @custom %>
   <%= f.submit %>
 <% end %>
