--- a/app/views/factory/admin/trade_items/_index_thead.html.erb
+++ b/app/views/factory/admin/trade_items/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= Factory::TradeItem.human_attribute_name(:number) %></th>
-<th><%= Factory::TradeItem.human_attribute_name(:amount) %></th>
-<th><%= Factory::TradeItem.human_attribute_name(:note) %></th>
-<th><%= Factory::TradeItem.human_attribute_name(:extra) %></th>
-<th><%= Factory::TradeItem.human_attribute_name(:status) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:number) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:amount) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:note) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:extra) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:status) %></th>
 <th></th>
