--- a/app/views/factory/admin/product_part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index_tbody.html.erb
@@ -1,16 +1,3 @@
-<tr>
-  <td><%= product_part_taxon.part_taxon.name %></td>
-  <td><%= product_part_taxon.min_select %></td>
-  <td><%= product_part_taxon.max_select %></td>
-  <td>
-    <%= link_to({ action: 'show', id: product_part_taxon.id }, { aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-info"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: product_part_taxon.id }, { aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: product_part_taxon.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= model.part_taxon.name %></td>
+<td><%= model.min_select %></td>
+<td><%= model.max_select %></td>
