--- a/app/views/factory/admin/trade_items/index.html.erb
+++ b/app/views/factory/admin/trade_items/index.html.erb
@@ -1,5 +1,5 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::TradeItem.column_names.hash } do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @trade_items, as: :trade_item %>
+<%= render layout: 'index_table', locals: { cache_key: Trade::TradeItem.column_names.hash } do %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @trade_items, as: :model %>
 <% end %>
 
 <%= paginate @trade_items %>
